[package]
name = "winu"
version = "0.1.0"
authors = ["subhash"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "2.1.1"
cosmwasm-std = { version = "2.1.1", features = ["stargate", "cosmwasm_2_0"] }

cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.10"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
thiserror = "1"
bincode = "1.3"


[dev-dependencies]
cw-multi-test = "2.0.0"
